# holbertonschool-low_level_programming

argc_argv/: .3-mul.c.swp  0-whatsmyname.c  1-args.c  2-args.c  3-mul.c  4-add.c  CMakeLists.txt  README.md
functions_nested_loops/: 0-putchar.c  1-alphabet.c  2-print_alphabet_x10.c  3-islower.c  3-main.c  4-isalpha.c  4-main.c  5-sign.c  6-abs.c  7-print_last_digit.c  8-24_hours.c  9-main.c  9-times_table.c  _putchar.c  main.h
hello_world/: 3-name  4-puts.c  5-printf.c  6-size.c  README.md
malloc_free/: .clang-format  0-create_array.c  0-main.c  1-main.c  1-strdup.c  2-main.c  2-str_concat.c  3-alloc_grid.c  3-main.c  4-free_greed.c  4-free_grid.c  4-main.c  CMakeLists.txt  main.h
more_functions_nested_loops/: 0-isupper.c  0-main.c  1-isdigit.c  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-print_diagonal.c  8-print_square.c  README.md  main.h
more_malloc_free/: .3-array_range.c.swp  .clang-format  0-main.c  0-malloc_checked.c  1-string_nconcat.c  2-calloc.c  3-array_range.c  3-main.c  CMakeLists.txt  README.md
pointers_arrays_strings/: .4-strpbrk.c.swp  .7-print_chessboard.c.swp  .main.h.swp  0-main.c  0-memset.c  0-reset_to_98.c  0-strcat.c  1-main.c  1-memcpy.c  1-strncat.c  1-swap.c  2-main.c  2-strchr.c  2-strlen.c  2-strncpy.c  3-main.c  3-putc.c  3-puts.c  3-strcmp.c  3-strspn.c  4-main.c  4-print_rev.c  4-rev_array.c  4-strpbrk.c  5-main.c  5-rev_string.c  5-string_toupper.c  5-strstr.c  6-main.c  6-puts2.c  7-print_chessboard.c  7-puts_half.c  8-main.c  8-print_array.c  8-print_diagsums.c  CMakeLists.txt  main.h
recursion/: 0-puts_recursion.c  1-main.c  1-print_rev_recursion.c  2-main.c  2-strlen_recursion.c  3-factorial.c  3-main.c  4-main.c  4-pow_recursion.c  5-main.c  5-sqrt.c  5-sqrt_recursion.c  6-is_prime_number.c  6-main.c  6-prime.c  CMakeLists.txt  README.md  _putchar.c  _putschar.c  main.h
structures_typedef/: 0-main.c  1-init_dog.c  1-main.c  2-main.c  2-print_dog.c  3-main.c  4-main.c  4-new_dog.c  5-free_dog.c  5-main.c  CMakeLists.txt  README.md  dog.h
variables_if_else_while/: 0-positive_or_negative.c  1-last_digit.c  2-print_alphabet.c  (+6 more)
